[package]
name = "dicebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
regex = "1.5.4"
lazy_static = "1.4.0"
rand = "0.8.4"
indoc = "1.0.3"
